[package]
name = "primitive-types"
version = "0.5.1"
authors = ["Parity Technologies <admin@parity.io> and koushiro <koushiro.cqx@gmail.com>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "Primitive types shared by Ethereum and Substrate"
edition = "2018"

[dependencies]
fixed-hash = { version = "0.4", default-features = false }
uint = { version = "0.8", default-features = false }
impl-serde = { path = "impls/serde", default-features = false, optional = true }
impl-codec = { path = "impls/codec", default-features = false, optional = true }
impl-rlp = { path = "impls/rlp", default-features = false, optional = true }

[dev-dependencies]
byteorder = { version = "1.3", default-features = false }
rustc-hex = { version = "2.0", default-features = false }
serde_json = "1.0"

[features]
default = ["std"]
std = ["fixed-hash/std", "uint/std"]
serde = ["std", "impl-serde"]
codec = ["impl-codec"]
rlp = ["std", "impl-rlp"]
