[package]
name = "rlp"
version = "0.3.0"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/paritytech/parity-common"
license = "MIT/Apache-2.0"
authors = ["Parity Technologies <admin@parity.io> and koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"

[dependencies]
ustd = { path = "../ustd", default-features = false }
byteorder = { version = "1.3", default-features = false }
rustc-hex = { version = "2.0", default-features = false }

[features]
default = ["std"]
std = [
    "ustd/std",
    "byteorder/std",
    "rustc-hex/std",
]
