[package]
name = "impl-rlp"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io> and koushiro <koushiro.cqx@gmail.com>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "RLP serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
rlp = { path = "../../../rlp", default-features = false }

[features]
default = ["std"]
std = [
    "rlp/std",
]
