[package]
name = "impl-rlp"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io> and koushiro <koushiro.cqx@gmail.com>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "RLP serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
rlp = { version = "0.4", default-features = false }

#[features]
#default = ["std"]
#std = ["rlp/std"]
