[package]
name = "impl-serde"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io> and koushiro <koushiro.cqx@gmail.com>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "Serde serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
serde = "1.0"
rustc-hex = "2.0"
